--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "sass": "^1.75.0"
   }
 }
